test/ui/tests/metadata/empty-list-with-comma.stderr
error: found `,` but expected value
 --> ${DIRECTORY}/metadata/empty-list-with-comma.metadata:3:2
  |
3 | [,]
  |  ^ 
  |

error: aborting due to previous error

